syntax = "proto3";

package pb;

import "location.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";


// A message for Church data
message Church {
  string auth_id = 1;
  int32 id = 2;
  string email = 3;
  string username = 4;
  string phone = 5;
  string password = 6;
  int32 denomination_id = 7;
  string name = 8;
  Location location = 9;
  string image_url = 10;
  int64 following_count = 11;
  int64 follower_count = 12;
  int64 membership_count = 13;
  bool is_verified = 14;
  int64 post_count = 15;
  string about = 16;
  string website = 17;
  string header_image_url = 18;
  string account_name = 19;
  string account_number = 20;
  string bank_name = 21;
}

message CreateChurchResponse {
  bool success = 1;
  string message = 2;
}

message SearchChurchResponse {
  repeated Church church = 1;
  bool has_more = 2;
}
