syntax = "proto3";

package pb;

import "location.proto";
import "church.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

// A message for User's membership data
message Membership {
    int32 id = 1;
    google.protobuf.Timestamp join_date = 2;
    // Depending on the context, this could be either a church_id or denomination_id
    int32 entity_id = 3;
  }
  
  // Request to join or leave a church/denomination
message MembershipChangeRequest {
    oneof entity {
      int32 church_id = 1;
      int32 denomination_id = 2;
    }
  }

  message MembershipChangeResponse {}
  
// Search request message
message SearchRequestChurch {
  string query = 1; // The search query string
  int32 page_number = 2;
  int32 page_size = 3;
  optional Coordinate user_location = 4; // Optional for nearby search
}

message GetChurchProfileRequest {
  string auth_id = 1;
}

message GetChurchProfileResponse {
  Church church = 1;
  bool is_following = 2;
  bool is_followed = 3;
  bool is_member = 4;
}

message GetUserChurchRequest {}

message GetUserChurchResponse {
  Church church = 1;
  bool is_following = 2;
  bool is_followed = 3;
}

message ChurchMember {
  string auth_id = 1;
  string image_url = 2;
  string first_name = 3;
  string username = 4;
  bool is_verified = 5;
}

// Get church members
message GetChurchMembersRequest {
  int32 church_id = 1;
  int32 page_number = 2;
  int32 page_size = 3;
  string order = 4;
}

message GetChurchMembersResponse {
  bool is_member = 1;
  ChurchMember members = 2;
}